@@ -590,8 +590,8 @@ static inline void php_register_server_variables(TSRMLS_D)
 	/* store request init time */
 	{
 		zval new_entry;
-		Z_TYPE(new_entry) = IS_LONG;
-		Z_LVAL(new_entry) = sapi_get_request_time(TSRMLS_C);
+		Z_TYPE(new_entry) = IS_DOUBLE;
+		Z_DVAL(new_entry) = sapi_get_request_time(TSRMLS_C);
 		php_register_variable_ex("REQUEST_TIME", &new_entry, array_ptr TSRMLS_CC);
 	}
 
