@@ -335,10 +335,10 @@ static void php_apache_sapi_log_message_ex(char *msg, request_rec *r TSRMLS_DC)
 	}
 }
 
-static time_t php_apache_sapi_get_request_time(TSRMLS_D)
+static double php_apache_sapi_get_request_time(TSRMLS_D)
 {
 	php_struct *ctx = SG(server_context);
-	return apr_time_sec(ctx->r->request_time);
+	return apr_time_as_msec(ctx->r->request_time);
 }
 
 extern zend_module_entry php_apache_module;
